# HumanCursor

./: LICENSE  README.md  pyproject.toml
cursors/: __init__.py  system_cursor.py  web_cursor.py
cursors/utilities/: human_curve_generator.py  web_adjuster.py
humancursor/: __init__.py  system_cursor.py  web_cursor.py
humancursor/HCS_files/: cursor_collector.py  script_constructor.py
humancursor/HCScripter/: gui.py  launch.py
humancursor/test/: system.py  web.py
humancursor/utilities/: calc.py  calculate_and_randomize.py  human_curve_generator.py  web_adjuster.py
